; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_item_default_data.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_item_default_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.obs_data_item*)* @get_item_default_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_item_default_data(%struct.obs_data_item* %0) #0 {
  %2 = alloca %struct.obs_data_item*, align 8
  store %struct.obs_data_item* %0, %struct.obs_data_item** %2, align 8
  %3 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %4 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.obs_data_item*, %struct.obs_data_item** %2, align 8
  %9 = call i8* @get_default_data_ptr(%struct.obs_data_item* %8)
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %7
  %12 = phi i8* [ %9, %7 ], [ null, %10 ]
  ret i8* %12
}

declare dso_local i8* @get_default_data_ptr(%struct.obs_data_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
